# zword

./: .gitignore  README.md
build-zword-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qrc_application.cpp  qtcsettings.cmake  zword.ilk
build-zword-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-zword-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-zword-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/images/: apple.qrc.depends
build-zword-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/zword_autogen/: deps  mocs_compilation.cpp
build-zword-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/zword_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_zword.cpp  moc_zword.cpp.d
build-zword-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/zword_autogen/include/: ui_mainwindow.h  ui_widget.h  ui_zword.h
build-zword-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: CMakeCache.txt  qtcsettings.cmake
document/: zword.tex  中期报告.docx  期中报告.md
document/pic/: 这里放图片
document/source/: Report.cls
document/代码说明/: 代码说明.md
zword/: CMakeLists.txt  application.qrc  main.cpp  mainwindow.cpp  mainwindow.ui  widget.cpp  zword.cpp  zword.h  zword.ui
zword/src/: customDocument.cpp  dbmanager.cpp  dbmanager.h  highlighter.cpp  highlighter.h  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodedata.cpp  nodedata.h  noteeditorlogic.cpp  noteeditorlogic.h  searchIterator.cpp  searchIterator.h  styles.qrc  theme.h
(+353 files in other folders)
